--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.FinalApplicationClass"
         tools:targetApi="31">
         <activity
-            android:name=".StudentsListViewActivity"
+            android:name=".StudentsRecyclerViewActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,12 +22,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".StudentsListViewActivity"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".AddStudentActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
