--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,6 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+CLOUD_NAME=dyss3oglu
+API_KEY=315995133558718
+API_SECRET=EI4_K0m5V5zal_jaOmlgHY3Uimk
